log
Thu 12 Oct 2023 10:51:36 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
7fbed56
Thu 12 Oct 2023 11:02:11 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|3
total_score: 10/70
f4d8feb
Thu 12 Oct 2023 11:03:46 PM UTC: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
eb42ae4
Thu 12 Oct 2023 11:35:54 PM UTC: 
 heap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:53:43: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   53 |   while(i!=0 && pq->heapArray[i].priority < pq->heapArray[i].priority){
      |                                           ^
cc1: all warnings being treated as errors
Compilation failed
4e5b325
Thu 12 Oct 2023 11:36:52 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   42 |   nuevo->priority=priority;
      |        ^~
Compilation failed
bf9c297
Thu 12 Oct 2023 11:37:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
0d6ee57
